Updating no tears

--- a/src/NoTears.ipynb
+++ b/src/NoTears.ipynb
@@ -146,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = 4\n",
+    "nodes = 5\n",
     "datasize = 100\n",
     "G = random_dag(nodes, nodes*nodes)\n",
     "df = gen_data(G, SIZE = datasize)"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,19 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.74183761, 0.        , 0.98596853],\n",
-       "       [0.        , 0.        , 0.        , 0.        ],\n",
-       "       [0.96801875, 0.42388494, 0.        , 0.95854407],\n",
-       "       [0.        , 1.2849457 , 0.        , 0.        ]])"
+       "array([[0.        , 1.10761785, 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [1.21794587, 0.63742826, 0.        , 0.        , 0.        ],\n",
+       "       [0.36435509, 1.14796326, 0.73041885, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 1.05522904, 0.43774968, 0.        ]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OutEdgeView([(0, 3), (0, 1), (2, 1), (2, 3), (2, 0), (3, 1)])"
+       "OutEdgeView([(0, 1), (2, 0), (2, 1), (3, 0), (3, 4), (3, 1), (3, 2), (4, 2)])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
