I think this is working now

--- a/src/NoTears-updated.ipynb
+++ b/src/NoTears-updated.ipynb
@@ -162,46 +162,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00000000e+00 8.73697953e-01 5.46064561e-01 6.92487341e-01\n",
-      " 9.85290176e-01 4.19247781e-06 0.00000000e+00 6.79957349e-01\n",
-      " 8.14133357e-01 9.84361465e-01 2.87523322e-05 1.66273813e-05\n",
-      " 0.00000000e+00 4.01926128e-06 7.17550203e-06 1.32053239e-05\n",
-      " 8.18612134e-06 1.19081750e+00 0.00000000e+00 3.69855836e-06\n",
-      " 5.90022307e-06 4.38161333e-06 9.40983272e-01 1.18591907e+00\n",
+      "[0.00000000e+00 9.29348164e-05 5.86389088e-06 2.01444849e-05\n",
+      " 4.82854217e-05 4.98242295e-01 0.00000000e+00 7.93205218e-01\n",
+      " 9.13842392e-01 8.87965036e-01 1.24654892e+00 3.71878347e-05\n",
+      " 0.00000000e+00 6.75522626e-06 1.75611865e-05 9.07470025e-01\n",
+      " 1.44498862e-05 1.10635903e+00 0.00000000e+00 5.05883693e-06\n",
+      " 6.03671023e-01 4.46866466e-06 8.87735553e-01 9.98802459e-01\n",
+      " 0.00000000e+00 0.00000000e+00 4.03214599e-05 1.85253693e-06\n",
+      " 5.10222327e-06 1.51515475e-05 0.00000000e+00 0.00000000e+00\n",
       " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      " 9.43339705e-06 0.00000000e+00 1.38332912e-06 4.03629591e-06\n",
+      " 0.00000000e+00 3.50783548e-06 0.00000000e+00 0.00000000e+00\n",
+      " 1.26140294e-06 0.00000000e+00 1.67897105e-06 0.00000000e+00\n",
       " 0.00000000e+00 0.00000000e+00]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.87369795, 0.54606456, 0.69248734, 0.98529018],\n",
-       "       [0.        , 0.        , 0.67995735, 0.81413336, 0.98436146],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 1.1908175 , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.94098327, 1.18591907, 0.        ]])"
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.49824229, 0.        , 0.79320522, 0.91384239, 0.88796504],\n",
+       "       [1.24654892, 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.90747003, 0.        , 1.10635903, 0.        , 0.        ],\n",
+       "       [0.60367102, 0.        , 0.88773555, 0.99880246, 0.        ]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_DAG = df.values\n",
-    "W_est = notears_linear_l1(X_vals, lambda1=0.1, loss_type='l2')\n",
+    "W_est = notears_linear_l1(X_DAG, lambda1=0.1, loss_type='l2')\n",
     "W_est"
    ]
   },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
     "import random\n",
     "# Parameters\n",
     "learning_rate = 0.01\n",
-    "num_steps = 500\n",
+    "num_steps = 1500\n",
     "batch_size = 32\n",
     "display_step = 100\n",
     "\n",
@@ -301,20 +301,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1, Minibatch Loss= 374.2048\n",
-      "Step 100, Minibatch Loss= 23.8896\n",
-      "Step 200, Minibatch Loss= 4.8423\n",
-      "Step 300, Minibatch Loss= 2.6470\n",
-      "Step 400, Minibatch Loss= 2.5169\n",
-      "Step 500, Minibatch Loss= 2.1535\n",
-      "Optimization Finished!\n"
+      "Step 1, Minibatch Loss= 196.6864\n",
+      "Step 100, Minibatch Loss= 44.9335\n",
+      "Step 200, Minibatch Loss= 8.1786\n",
+      "Step 300, Minibatch Loss= 3.8259\n",
+      "Step 400, Minibatch Loss= 2.8543\n",
+      "Step 500, Minibatch Loss= 2.3534\n",
+      "Step 600, Minibatch Loss= 2.0427\n",
+      "Step 700, Minibatch Loss= 1.9167\n",
+      "Step 800, Minibatch Loss= 1.7717\n",
+      "Step 900, Minibatch Loss= 1.7169\n",
+      "Step 1000, Minibatch Loss= 1.6851\n",
+      "Step 1100, Minibatch Loss= 1.2910\n",
+      "Step 1200, Minibatch Loss= 1.5075\n",
+      "Step 1300, Minibatch Loss= 1.1428\n",
+      "Step 1400, Minibatch Loss= 1.3625\n",
+      "Step 1500, Minibatch Loss= 1.2292\n",
+      "Optimization Finished!\n",
+      "[[ 0.308747    0.40847448 -0.28280076  0.43573633  0.29014733]\n",
+      " [ 0.5142769  -0.01530477  1.3930397  -1.1907339  -0.89588666]\n",
+      " [ 0.60302484 -0.09240921  0.15281205  0.08669268 -0.13157883]\n",
+      " [ 0.9464486  -0.5591849   1.4756604   0.02620424 -0.06194502]\n",
+      " [ 0.60207665 -0.960438    1.3467728  -0.90355265  0.01012154]]\n",
+      "[[0 0 0 0 0]\n",
+      " [1 0 1 1 1]\n",
+      " [1 0 0 0 0]\n",
+      " [1 0 1 0 0]\n",
+      " [1 0 1 1 0]]\n"
      ]
     }
    ],
@@ -333,15 +353,11 @@
     "            _, loss = sess.run([loss_op, regularization_loss(X)], feed_dict={X: batch_x, Y: batch_y})\n",
     "            print(\"Step \" + str(step) + \", Minibatch Loss= \" + \"{:.4f}\".format(loss)) \n",
     "\n",
-    "    print(\"Optimization Finished!\")\n"
+    "    print(\"Optimization Finished!\")\n",
+    "\n",
+    "    print(weights['h1'].eval())\n",
+    "    print(nx.adjacency_matrix(G).todense())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
