Updating Notears again

--- a/src/NoTears-updated.ipynb
+++ b/src/NoTears-updated.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -223,8 +223,8 @@
     "import tensorflow as tf\n",
     "import random\n",
     "# Parameters\n",
-    "learning_rate = 0.01\n",
-    "num_steps = 1500\n",
+    "learning_rate = 0.001\n",
+    "num_steps = 2500\n",
     "batch_size = 32\n",
     "display_step = 100\n",
     "\n",
@@ -272,8 +272,6 @@
     "    h = (E.T * M).sum() - d\n",
     "    '''\n",
     "    n, d = X.shape\n",
-    "\n",
-    "    #W = y_pred\n",
     "    M = tf.convert_to_tensor(np.eye(d))\n",
     "    d = tf.cast(d, tf.float32)\n",
     "    M = M + tf.cast(W * W / d, tf.float64)\n",
@@ -281,6 +279,7 @@
     "\n",
     "    h = tf.reduce_sum(tf.cast(tf.transpose(E) * M, tf.float32)) - d \n",
     "\n",
+    "    '''Some NOTEARS params'''\n",
     "    rho = 1 # I don't think we need to do anything with this.\n",
     "    alpha = 1 #same here\n",
     "    lambda1 = 0.1 \n",
@@ -301,35 +300,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1, Minibatch Loss= 196.6864\n",
-      "Step 100, Minibatch Loss= 44.9335\n",
-      "Step 200, Minibatch Loss= 8.1786\n",
-      "Step 300, Minibatch Loss= 3.8259\n",
-      "Step 400, Minibatch Loss= 2.8543\n",
-      "Step 500, Minibatch Loss= 2.3534\n",
-      "Step 600, Minibatch Loss= 2.0427\n",
-      "Step 700, Minibatch Loss= 1.9167\n",
-      "Step 800, Minibatch Loss= 1.7717\n",
-      "Step 900, Minibatch Loss= 1.7169\n",
-      "Step 1000, Minibatch Loss= 1.6851\n",
-      "Step 1100, Minibatch Loss= 1.2910\n",
-      "Step 1200, Minibatch Loss= 1.5075\n",
-      "Step 1300, Minibatch Loss= 1.1428\n",
-      "Step 1400, Minibatch Loss= 1.3625\n",
-      "Step 1500, Minibatch Loss= 1.2292\n",
+      "Step 1, Minibatch Loss= 211.3484\n",
+      "Step 100, Minibatch Loss= 168.0577\n",
+      "Step 200, Minibatch Loss= 260.8247\n",
+      "Step 300, Minibatch Loss= 121.1237\n",
+      "Step 400, Minibatch Loss= 85.0117\n",
+      "Step 500, Minibatch Loss= 66.0043\n",
+      "Step 600, Minibatch Loss= 55.5152\n",
+      "Step 700, Minibatch Loss= 67.8782\n",
+      "Step 800, Minibatch Loss= 40.3970\n",
+      "Step 900, Minibatch Loss= 22.0684\n",
+      "Step 1000, Minibatch Loss= 31.6012\n",
+      "Step 1100, Minibatch Loss= 22.7454\n",
+      "Step 1200, Minibatch Loss= 21.1569\n",
+      "Step 1300, Minibatch Loss= 14.8793\n",
+      "Step 1400, Minibatch Loss= 12.5130\n",
+      "Step 1500, Minibatch Loss= 11.9307\n",
+      "Step 1600, Minibatch Loss= 7.0512\n",
+      "Step 1700, Minibatch Loss= 6.7492\n",
+      "Step 1800, Minibatch Loss= 5.6420\n",
+      "Step 1900, Minibatch Loss= 5.7373\n",
+      "Step 2000, Minibatch Loss= 4.5596\n",
+      "Step 2100, Minibatch Loss= 4.3620\n",
+      "Step 2200, Minibatch Loss= 4.3702\n",
+      "Step 2300, Minibatch Loss= 3.3913\n",
+      "Step 2400, Minibatch Loss= 3.1503\n",
+      "Step 2500, Minibatch Loss= 2.8304\n",
       "Optimization Finished!\n",
-      "[[ 0.308747    0.40847448 -0.28280076  0.43573633  0.29014733]\n",
-      " [ 0.5142769  -0.01530477  1.3930397  -1.1907339  -0.89588666]\n",
-      " [ 0.60302484 -0.09240921  0.15281205  0.08669268 -0.13157883]\n",
-      " [ 0.9464486  -0.5591849   1.4756604   0.02620424 -0.06194502]\n",
-      " [ 0.60207665 -0.960438    1.3467728  -0.90355265  0.01012154]]\n",
+      "[[ 0.4915184  -0.26115128 -0.25499156  0.60967195  0.9604991 ]\n",
+      " [ 0.54276454  0.02792393  0.8928426  -0.10516954 -0.29307058]\n",
+      " [ 0.08734593  0.270296    0.45998874 -0.27904007 -1.3060632 ]\n",
+      " [ 0.9175119   0.08979382  0.4885157   0.2312842  -0.07468524]\n",
+      " [ 1.1375868   1.356341    1.8070427  -1.9998281  -0.25186697]]\n",
       "[[0 0 0 0 0]\n",
       " [1 0 1 1 1]\n",
       " [1 0 0 0 0]\n",
@@ -358,6 +367,13 @@
     "    print(weights['h1'].eval())\n",
     "    print(nx.adjacency_matrix(G).todense())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
